client/assets/styles/scss/popover/popover-repository-toggle.scss
//- *************************
//- deprecated file, delete with $root.featureFlags.additionalRepositories

// .popover.right.popover-repository-toggle
.popover-repository-toggle {
  max-width: none;
  transform-origin: 0 24px;
  width: 360px;

  .popover-content {
    margin: 1px 0;
    max-height: 420px;
    overflow-x: hidden;
    overflow-y: auto;
  }

  // branch select
  .btn-select {
    padding: 0 3px;

    .iconnables {
      float: none;
      height: 18px;
      top: 3px;
      transform: none;
      width: 18px;
    }

    // delete button
    + .btn-xs {
      flex: 0 0 auto;
      float: right;
      margin-right: 6px;
    }
  }

  // spinner
  .spinner {
    color: $gray-light;
    margin: 30px auto;
  }

  // list
  .list {
    margin: 0 -6px;
    padding: 0;
  }

  // list-item
  .list-item {
    height: auto;
    line-height: 1;
    overflow: visible;
    padding: 12px;
    white-space: normal;

    &.active,
    &:active {

      .small {
        color: $purple-light;
      }
    }
  }

  // older/newer buttons
  .btn-group:last-child {
    display: block;
    margin: 6px;

    .btn {
      font-size: 14px;
      width: 50%;

      &:only-child {
        width: 100%;
      }
    }
  }
}

// .toggle-group-title
.toggle-group-title {
  font-size: 14px;
  line-height: 1.3;
  margin-bottom: 6px;
  word-break: break-word;
}

.toggle-group-detail {
  display: flex;
  margin-left: 4px;

  .small {
    flex: 1 1 auto;
  }

  .link {
    color: $purple-light;
  }
}

//- end deprecated file, delete with $root.featureFlags.additionalRepositories
//- *************************

